--- a/CompileRazor/CompileRazor.csproj
+++ b/CompileRazor/CompileRazor.csproj
@@ -1,16 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace>AppBuilder.CompileRazor</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Remove="ProjectFile.cs" />
+    <Compile Remove="RazorDependencyResolver.cs" />
+    <Compile Remove="RazorInterop.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.Extensions" Version="5.0.0" />
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shared\Shared.csproj" />
