--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -2,9 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace>AppBuilder.Shared</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Annotations.cs" />
+    <Compile Remove="CodeSample.cs" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.8.0" />
+    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
+    <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0" />
   </ItemGroup>
 </Project>
