--- a/CompileConsole/CompileConsole.csproj
+++ b/CompileConsole/CompileConsole.csproj
@@ -2,7 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace>AppBuilder.CompileConsole</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="ConsoleDependencyResolver.cs" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0" />
   </ItemGroup>
