--- a/AppBuilderAlone/AppBuilderAlone.csproj
+++ b/AppBuilderAlone/AppBuilderAlone.csproj
@@ -3,11 +3,10 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
+    <PublishTrimmed>false</PublishTrimmed>
     <RootNamespace>AppBuilder.Client</RootNamespace>
   </PropertyGroup>
-  <PropertyGroup>
-    <BlazorWebAssemblyEnableLinking>false</BlazorWebAssemblyEnableLinking>
-  </PropertyGroup>
+  
   
   <ItemGroup>
     <None Include="Components\RazorProject\CodeFileModal.razor" />
