--- a/AppBuilderAlone/AppBuilderAlone.csproj
+++ b/AppBuilderAlone/AppBuilderAlone.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\routes.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" Version="3.0.0" />
     <PackageReference Include="BlazorMonaco" Version="1.6.0" />
     <PackageReference Include="Faso.Blazor.SpinKit" Version="1.0.1" />
