remove old icons

--- a/AppBuilderAlone/wwwroot/manifest.json
+++ b/AppBuilderAlone/wwwroot/manifest.json
@@ -14,7 +14,7 @@
       "purpose": "any maskable"
     },
     {
-      "src": "icons/folder_share-256.png",
+      "src": "icons/appbuilder-icon-256.png",
       "type": "image/png",
       "sizes": "256x256"
     },
